# api-polyorbite

./: .gitignore  Cargo.toml  Readme.md  Todo.md
src/: api_doc.rs  lib.rs  main.rs
src/common/: config.rs  group.rs  ldap.rs  mod.rs  user.rs
src/common/group/: group.rs  groups.rs  mod.rs
src/common/password/: hash_type.rs  mod.rs  password.rs  ssha.rs
src/common/user/: mod.rs  modify_user.rs  user.rs  user_attribute.rs  user_builder.rs  users.rs
src/route/: auth.rs  mod.rs  model.rs  route.rs  state.rs
