[package]
name = "api-polyorbite"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
dotenv = "0.15.0"
ldap3 = "0.11.3"
tokio = {version ="1.37",features = ["full"]}
regex = "1.10.4"
sha1 = "0.10.6"
base64 = "0.22.0"
rand = "0.8.5"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2",  features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }